feat: add PPO algorithm support
Training now supports both SAC and PPO:
- SAC (Soft Actor-Critic): Off-policy, sample efficient, uses replay buffer
- PPO (Proximal Policy Optimization): On-policy, stable, simpler

New:
- Added --algo argument to visual_train.py (sac or ppo)
- Algorithm selector dropdown in web UI
- PPO config: n_steps=2048, n_epochs=10, clip_range=0.2, gae_lambda=0.95
- Episode logger shows correct algorithm name

Usage:
  # SAC (default)
  python3 -m neoskidrl.scripts.visual_train --algo sac ...

  # PPO
  python3 -m neoskidrl.scripts.visual_train --algo ppo ...

Or just select from the dropdown in the web UI!

--- a/src/neoskidrl/ui/dashboard/control_panel.html
+++ b/src/neoskidrl/ui/dashboard/control_panel.html
@@ -499,6 +499,14 @@
                         </div>
                         
                         <div class="form-group">
+                            <label class="form-label">Algorithm</label>
+                            <select class="form-select" id="algo-select">
+                                <option value="sac">SAC (Soft Actor-Critic) - Off-policy, sample efficient</option>
+                                <option value="ppo">PPO (Proximal Policy Optimization) - On-policy, stable</option>
+                            </select>
+                        </div>
+                        
+                        <div class="form-group">
                             <label class="form-label">Total Steps</label>
                             <input type="number" class="form-input" id="total-steps" value="100000" step="10000">
                         </div>
@@ -816,6 +824,7 @@
         async function startTraining() {
             const config = {
                 config_path: document.getElementById('config-select').value,
+                algo: document.getElementById('algo-select').value,
                 total_steps: parseInt(document.getElementById('total-steps').value),
                 num_envs: parseInt(document.getElementById('num-envs').value),
                 batch_size: parseInt(document.getElementById('batch-size').value),
